--- a/css/main.css
+++ b/css/main.css
@@ -134,3 +134,7 @@ body {
 .filter-green {
     filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
 }
+
+.button-start__disabled{
+    cursor: wait;
+}
