--- a/css/main.css
+++ b/css/main.css
@@ -27,16 +27,23 @@ body {
     font-family: kemerik-3d;
 }
 
-.logo {
+.logo__container {
     --logo-size: calc(var(--index) * 8);
     width: var(--logo-size);
     height: var(--logo-size);
     background-repeat: no-repeat;
     position: absolute;
     left: calc(50% - calc(var(--logo-size) / 2));
-    top: calc(var(--index) * 6);
+    top: calc(var(--index) * 5);
     z-index: 1;
 }
+
+.logo__container img{
+    width: 100%;
+    height: 100%;
+}
+
+
 
 .layers {
     perspective: 1000px;
